--- a/src/Components/Bucketlist/style.module.css
+++ b/src/Components/Bucketlist/style.module.css
@@ -35,6 +35,7 @@ button {
 
 .popup {
     width: 50vw;
+    height: 50%;
     color: #fff;
     background-color: #000;
     position: absolute;
@@ -61,4 +62,8 @@ input {
     padding: 1rem;
     text-align: center;
     border-radius: 10px;
+}
+
+.checkbox {
+    cursor: pointer;
 }
